--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
     <p>El CEIP Capitulaciones de Santa Fe es un centro educativo público ubicado en Santa Fe, Granada, con un fuerte compromiso con la atención a la diversidad, el aprendizaje cooperativo y el desarrollo integral del alumnado.</p>
   </section>
 
+  <!-- Asistente Virtual -->
+  <section class="contenido">
+    <div class="asistente-seccion">
+      <h2><i class="fa-solid fa-robot"></i> Asistente Virtual del CEIP Capitulaciones</h2>
+      <div class="asistente-contenido">
+        <div class="asistente-info">
+          <p><strong>¡Pregúntame lo que necesites sobre nuestro colegio!</strong></p>
+          <p>Nuestro asistente virtual impulsado por inteligencia artificial está disponible 24/7 para ayudarte con:</p>
+          <ul>
+            <li>Información sobre horarios y calendario escolar</li>
+            <li>Detalles sobre el comedor y actividades extraescolares</li>
+            <li>Proceso de matriculación y documentación</li>
+            <li>Dudas sobre el proyecto educativo del centro</li>
+            <li>Cualquier otra consulta sobre el CEIP Capitulaciones</li>
+          </ul>
+        </div>
+        <div class="asistente-cta">
+          <a href="https://chatgpt.com/g/g-690a4f16ef6881919b013f61e39103da-ceip-capitulaciones" target="_blank" class="boton-asistente-grande">
+            <i class="fa-solid fa-comments"></i> Chatear Ahora
+          </a>
+          <p style="margin-top: 15px; font-size: 0.9rem; color: #666;">Respuestas instantáneas y personalizadas</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Enlaces a canales -->
   <section class="contenido" style="text-align:center;">
     <h2>📢 Nuestros canales</h2>
