--- a/podcast.html
+++ b/podcast.html
@@ -52,5 +52,13 @@
   <footer>
     <p>© 2025 CEIP Capitulaciones de Santa Fe | Todos los derechos reservados</p>
   </footer>
+  <!-- Botón Flotante Asistente Virtual -->
+  <div class="asistente-flotante">
+    <a href="https://chatgpt.com/g/g-690a4f16ef6881919b013f61e39103da-ceip-capitulaciones" target="_blank" class="boton-asistente">
+      <i class="fa-solid fa-robot"></i>
+      <span>Asistente Virtual</span>
+    </a>
+  </div>
+
 </body>
 </html>
